Added Google verification tag

--- a/indexxxxx.html
+++ b/indexxxxx.html
@@ -4,13 +4,12 @@
     <title>Top Travel Blogs in India | Explore Hidden Destinations</title>
 
     <!-- SEO Meta Tags -->
-    <meta name="google-site-verification">
     <meta name="description" content="Discover India's top travel blogs featuring hidden gems, destination guides, and travel tips across the country.">
     <meta name="keywords" content="India travel blogs, Indian tourism, travel tips, explore India, hidden destinations">
-    <meta name="author" content="Challa Indhu">
     
     <!-- ✅ Google Search Console Verification -->
-    <meta name="google-site-verification" content="PASTE-YOUR-CODE-HERE" />
+    <meta name="google-site-verification" content="aX2YnUef8gzG3xIEhNrUlPVGMohV1DD9gi4y4PbkV2I" />
+
 
     <!-- Required Meta -->
     <meta charset="UTF-8" />
