--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <title>About the Blogger | Top Travel Blogs in India</title>
@@ -45,4 +45,4 @@
     <p>Hi! I'm Indhu, a passionate traveler who loves exploring India’s rich culture, hidden places, and unique stories. Through this blog, I share real travel experiences, tips, and hidden gems to help fellow explorers find their own path.</p>
     <a href="index.html">← Back to Home</a>
   </body>
-</html>
+</html> -->
