Added Google verification meta tag

--- a/my-travel-blog/SEO/contact.html
+++ b/my-travel-blog/SEO/contact.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <title>Contact | Travel Blog India</title>
@@ -65,4 +65,4 @@
     </form>
     <a href="index.html">← Back to Home</a>
   </body>
-</html> -->
+</html> 
